--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/product-service
+spring.application.name=product-service
+spring.data.mongodb.uri=mongodb://root:rootpassword@localhost:27017/product-service?authSource=admin
